# BananaQuake

./: .gitattributes  .gitignore  .gitmodules  README.MD  cleanipch.bat  glbananaquake.bat  glbananaquake.sh  glbananaquakeserver.bat  maketar.sh  makezip.bat  rename_files.ps1  resolve_git.py  server.bat  softwarebananaquake.bat  softwarebananaquake.sh
QW/: makezip
QW/scitech/include/: debug.h
WinQuake/: BananaQuake.sln  BananaQuake64bit.sln  CMakeLists.txt  Makefile  Makefile.cygwin  WinQuake.dsp  WinQuake.kdev4  WinQuake.sln  WinQuake.vcxproj  anorm_dots.h  anorms.h  asm_draw.h  asm_i386.h  bananaquakeopengl.bat  bananaquakeopengl.sh  bgmusic.cpp  bgmusic.h  bspfile.h  bspfile_goldsrc.h  bspfile_source.h  cd_linux.cpp  cd_win.cpp  cdaudio.h  cfgfile.cpp  cfgfile.h  chase.cpp  cl_demo.cpp  cl_input.cpp  cl_main.cpp  cl_parse.cpp  cl_tent.cpp  clean.bat  clean.sh  client.h  cmd.cpp  cmd.h  common.cpp  common.h  config.cfg  conproc.cpp  (+211 more)
WinQuake/.kdev4/: WinQuake.kdev4
WinQuake/gas2masm/: gas2masm.cpp  gas2masm.dsp  gas2masm.vcxproj
WinQuake/gas2masm/Debug/: gas2masm.exe.recipe  gas2masm.vcxproj.FileListAbsolute.txt
WinQuake/qc_sources/: defs.qc  hl1.qc  hl1_barney.qc  hl1_scientist.qc  volumes.qc
WinQuake/scitech-mgl/examples/mgl/foxbear/sounds/: jump.dwd  miss.dwd  stop.dwd  strike.dwd  throw.dwd
WinQuake/scitech-mgl/src/SciTechMGL/: SciTechMGL.sln
WinQuake/scitech-mgl/src/glut/: g_8x13.fnt
WinQuake/scitech-mgl/src/mgl/: mgl.h  mgl_gl.c
WinQuake/scitech-mgl/src/mgl/fntcvt/: mklib.c
WinQuake/scitech/INCLUDE/: DEBUG.H  MGRAPH.H
WinQuake/sdl2/VisualC/SDL/: SDL.vcxproj  SDL.vcxproj.filters
WinQuake/sdl2/include/: SDL_config.h  SDL_revision.h
WinQuake/svgalib/et4000/: tseng3.c
WinQuake/svgalib/src/: libvga.h  vga.c  vgamisc.c  vgapix.c
WinQuake/svgalib/support/: trap-out.com
WinQuake/svgalib/utils/gtf/: scitech.h
WinQuake/tracy/: TracyClient.cpp
tools/: README.MD
tools/QuakeEd/: cmdlib.h
tools/qcc/: CMakeLists.txt  builtin.cpp  cmdlib.cpp  cmdlib.h  forwarddecl.cpp  pr_comp.cpp  pr_comp.h  pr_lex.cpp  progdefs.h  qcc.cpp  qcc.h  qcc.sln  qcc.vcxproj
tools/qcc/Debug/: qcc.exe.recipe
tools/qcc/x64/Debug/: qcc64.exe.recipe
tools/qcc/x64/Release/: qcc64.exe.recipe
tools/qutils/: CMakeLists.txt  cmake_generate.bat  cmake_generate.sh
tools/qutils/BSPINFO/: BSPINFO.cpp
tools/qutils/COMMON/: BSPFILE.cpp  CMDLIB.H  CMDLIB.cpp  LBMLIB.H  LBMLIB.cpp  MATHLIB.cpp  POLYLIB.cpp  SCRIPLIB.cpp  THREADS.cpp  TRILIB.cpp  WADLIB.cpp
tools/qutils/LIGHT/: ENTITIES.H  ENTITIES.cpp  LIGHT.H  LIGHT.cpp  LTFACE.cpp  THREADS.cpp  TRACE.cpp
tools/qutils/MODELGEN/: MODELGEN.H  MODELGEN.cpp
tools/qutils/QBSP/: BRUSH.cpp  BSP5.H  BSP5.cpp  CSG4.cpp  MAP.H  MAP.cpp  MERGE.cpp  NODRAW.cpp  OUTSIDE.cpp  PORTALS.cpp  QBSP.cpp  REGION.cpp  SOLIDBSP.cpp  SURFACES.cpp  TJUNC.cpp  WRITEBSP.cpp
tools/qutils/QCC/: PR_COMP.H  PR_COMP.cpp  PR_LEX.cpp  QCC.H  QCC.cpp  UpgradeLog.htm  builtin.h
tools/qutils/QCC/Release/: qcc.pch
tools/qutils/QFILES/: QFILES.C  QFILES.cpp
tools/qutils/QFILES/Release/: qfiles.pch
tools/qutils/QLUMPY/: QLUMPY.H  QLUMPY.cpp
tools/qutils/QLUMPY/Release/: qlumpy.pch
tools/qutils/SPRGEN/: SPRGEN.cpp  SPRITEGN.H
tools/qutils/TEXMAKE/: TEXMAKE.cpp
tools/qutils/VIS/: FLOW.cpp  SOUNDPVS.cpp  VIS.H  VIS.cpp
tools/qutils/VIS/Release/: vis.pch
